--- a/app/src/main/res/layout/fragment_home_item.xml
+++ b/app/src/main/res/layout/fragment_home_item.xml
@@ -13,7 +13,9 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/space"
+        app:cardBackgroundColor="#666">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
